# doc-weaver-agent

./: .gitignore  INSTALLATION.md  Makefile  README.md  example-template.md  pyproject.toml
docs/: doc_weaver.html  index.html  search.js
src/doc_weaver/: __init__.py  cli.py  document.py  hydrate_batch.py  hydrate_queue.py  parser.py  responder.py
src/doc_weaver/test/: test_cli.py  test_hydrate_batch.py  test_hydrate_queue.py  test_models.py  test_parser.py  test_responder.py  test_text_morpher.py
src/doc_weaver/text_morpher/: __init__.py  hot_testing.py  nodes.py  state.py
