[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "doc-weaver-agent"
version = "1.0.0"
description = "A tool that hydrates (populates) markdown document templates. "
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=1.2.7",
    "langchain-core>=1.2.7",
    "langchain-openai>=1.1.7",
    "langgraph>=1.0.7",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0"
]

[tool.coverage.run]
omit = ["src/doc_weaver/text_morpher/hot_testing.py"]

[tool.setuptools.packages.find]
where = ["src"]
